fix map on safari (#492)
`height: 100%` didn't work on children with `flex-basis: auto` in safari

also:
* remove width: 100% that caused the page to be slightly too wide (because of margins)
* hide route ladders scroll bar if the page is narrow (overflow-x: auto)

--- a/assets/css/_route_ladders.scss
+++ b/assets/css/_route_ladders.scss
@@ -11,7 +11,7 @@
     [m-incoming-box] max-content;
   height: 100%;
   max-width: 100%;
-  overflow-x: scroll;
+  overflow-x: auto;
   padding: 1rem;
   // leave space for the picker container tab, which is always visible
   padding-left: 3rem;
